--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,7 +5,7 @@ spring:
             driver-class-name: com.mysql.cj.jdbc.Driver
             url: jdbc:mysql://localhost:3306/servicesystem?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
             username: root
-            password: 111111
+            password: 11111111
             initial-size: 10
             max-active: 100
             min-idle: 10
